[package]
name = "http_status_codes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
reqwest = {version = "0.11.22", features = ["blocking"]}
scraper = "0.18.1"
